home/pihole/namespace.yml
# This file is symlinked between the two deployments
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
