home/pihole/pihole.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pihole
  name: pihole-deployment
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          # upstream DNS used by pihole.
          - 9.9.9.9
          - 1.1.1.1
          - 9.9.9.10
      containers:
      - image: pihole/pihole:latest
        name: pihole
        securityContext:
          capabilities: {}
        volumeMounts:
          - name: pihole-etc-mount
            mountPath: "/etc/pihole"
          - name: pihole-dnsmasq-mount
            mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-etc-mount
        persistentVolumeClaim:
          claimName: pihole-etc
      - name: pihole-dnsmasq-mount
        persistentVolumeClaim:
          claimName: pihole-dnsmasq
